--- a/browser-app/package.json
+++ b/browser-app/package.json
@@ -15,7 +15,7 @@
     "@theia/terminal": "latest",
     "@theia/workspace": "latest",
     "myWidgetExtension": "0.0.0",
-    "emptyExtension": "0.0.0"
+    "ticExtension": "0.0.0"
   },
   "devDependencies": {
     "@theia/cli": "latest"
