--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "start:browser": "yarn rebuild:browser && yarn --cwd browser-app start",
     "start:electron": "yarn rebuild:electron && yarn --cwd electron-app start",
     "watch": "lerna run --parallel watch",
-    "test": "cd myWidgetExtension && yarn test"
+    "test": "cd ticExtension && yarn test"
   },
   "devDependencies": {
     "lerna": "^2.4.0"
   },
   "workspaces": [
-    "packages/myWidgetExtension",
     "packages/ticExtension",
     "browser-app",
     "electron-app"
