--- a/package.json
+++ b/package.json
@@ -1,20 +1,57 @@
 {
-  "private": true,
-  "scripts": {
-    "prepare": "lerna run prepare",
-    "rebuild:browser": "theia rebuild:browser",
-    "rebuild:electron": "theia rebuild:electron",
-    "start:browser": "yarn rebuild:browser && yarn --cwd browser-app start",
-    "start:electron": "yarn rebuild:electron && yarn --cwd electron-app start",
-    "watch": "lerna run --parallel watch",
-    "test": "cd ticExtension && yarn test"
+  
+    "private": true,
+    "dependencies": {
+      "@theia/callhierarchy": "next",
+      "@theia/file-search": "next",
+      "@theia/git": "next",
+      "@theia/markers": "next",
+      "@theia/messages": "next",
+      "@theia/navigator": "next",
+      "@theia/outline-view": "next",
+      "@theia/plugin-ext-vscode": "next",
+      "@theia/preferences": "next",
+      "@theia/preview": "next",
+      "@theia/search-in-workspace": "next",
+      "@theia/terminal": "next",
+      "@theia/vsx-registry": "next",
+      "ticExtension" : "0.0.0"
+    },
+    "devDependencies": {
+      "@theia/cli": "next",
+      "lerna": "^2.4.0"
+    },
+    "scripts": {
+      "prepareB": "lerna run prepare",
+      "prepare": "yarn run clean && yarn build && yarn run download:plugins",
+      "clean": "theia clean",
+      "build": "theia build --mode development",
+      "start": "theia start --plugins=local-dir:plugins",
+      "download:plugins": "theia download:plugins"
+    },
+    "theiaPluginsDr": "plugins",
+    "theiaPlugins": {
+      "vscode-builtin-extensions-pack": "https://open-vsx.org/api/eclipse-theia/builtin-extension-pack/1.50.1/file/eclipse-theia.builtin-extension-pack-1.50.1.vsix"
+    },
+    "theiaPluginsExcludeIds": [
+      "vscode.extension-editing",
+      "vscode.git",
+      "vscode.git-ui",
+      "vscode.github",
+      "vscode.markdown-language-features",
+      "vscode.microsoft-authentication"
+    ],
+    "theia": {
+      "frontend": {
+          "config": {
+              "applicationName": "Theia  Example",
+              "preferences": {
+                  "files.enableTrash": false
+              }
+          }
+      }
   },
-  "devDependencies": {
-    "lerna": "^2.4.0"
-  },
-  "workspaces": [
-    "packages/ticExtension",
-    "browser-app",
-    "electron-app"
-  ]
-}
+    "workspaces": [
+      "packages/ticExtension"
+    ]
+  }
